<resources>
    <string name="app_name">Marketim</string>
    <string name="BASE_URL_ORDER_LIST" translatable="false" formatted="false">http://kariyertechchallenge.mockable.io/</string>
    <string-array name="aylar">
        <item>Ocak</item>
        <item>Şubat</item>
        <item>Mart</item>
        <item>Nisan</item>
        <item>Mayıs</item>
        <item>Haziran</item>
        <item>Temmuz</item>
        <item>Ağustos</item>
        <item>Eylül</item>
        <item>Ekim</item>
        <item>Kasım</item>
        <item>Aralık</item>
    </string-array>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="rememberme">Beni Hatırla</string>
    <string name="login">Giriş</string>
    <string name="wrong_credentials_warning">Girdiğiniz bilgiler yanlış.Lütfen tekrar deneyiniz.</string>
    <string name="credential_username">kariyer</string>
    <string name="credential_password">2019ADev</string>
    <string name="login_form_fragment_title">Giriş Formu</string>
    <string name="order_list_fragment_title">Siparişlerim</string>
    <string name="you_are_already_viewing_my_orders">Şu an siparişlerinizi görüntülüyorsunuz.</string>
    <string name="log_out">Çıkış Yap</string>
    <string name="log_out_alert_warning_message">Çıkış yapmak istediğinizden emin misiniz?</string>
    <string name="log_out_alert_warning_yes">Eminim</string>
    <string name="log_out_alert_warning_no">Vazgeç</string>
    <string name="shared_pref">marketim_shared_preferences</string>
</resources>
